feat(Tasks) Stylised back button to LabPage.tsx and TaskPage.tsx Completed 4-10 tasks Added new styles to index.css

--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,13 @@ p {
 .font-source-sans {
     font-family: 'Source Sans Pro', sans-serif;
 }
+
+.table-task-7 {
+    width: 1000px;
+}
+.table-task-8 {
+    width: 800px;
+}
+.td-task {
+    text-align: center;
+}
