--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lavishly+Yours&display=swap');
 @import "tailwindcss";
 
 body {
@@ -12,8 +13,15 @@ body {
     @apply flex flex-col gap-4;
 }
 
-.lab-task-item {
+.lab-page-item {
     @apply w-[500px] p-4 bg-white rounded-2xl shadow-md hover:shadow-lg transition-all;
+}
+.lab-page-item a {
+    @apply block text-lg font-medium text-gray-700 text-center no-underline;
+}
+
+.lab-task-item {
+    @apply inline-block p-4 bg-white rounded-2xl shadow-md hover:shadow-lg transition-all;
 }
 
 .lab-task-item a {
@@ -46,4 +54,10 @@ p {
 }
 .td-task {
     text-align: center;
+}
+
+.lavishly-yours-regular {
+    font-family: "Lavishly Yours", cursive;
+    font-weight: 400;
+    font-style: normal;
 }
